--- a/GUI/src/JavaFx/Header/Header.fxml
+++ b/GUI/src/JavaFx/Header/Header.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
@@ -23,5 +24,6 @@
             <Insets left="10.0" />
          </VBox.margin>
       </HBox>
+      <Separator maxHeight="20.0" minHeight="20.0" prefHeight="20.0" prefWidth="200.0" />
    </children>
 </VBox>
