--- a/GUI/src/JavaFx/Body/FlowExecution/FlowExecution.fxml
+++ b/GUI/src/JavaFx/Body/FlowExecution/FlowExecution.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableColumn?>
@@ -11,10 +12,11 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<ScrollPane fitToHeight="true" fitToWidth="true" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="JavaFx.Body.FlowExecution.FlowExecution">
+<ScrollPane fitToHeight="true" fitToWidth="true" stylesheets="@../body.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="JavaFx.Body.FlowExecution.FlowExecution">
    <content>
       <BorderPane id="flowExecutionBorderPane" fx:id="flowExecutionBorderPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="537.0" minWidth="841.0" prefHeight="537.0" prefWidth="841.0">
          <top>
@@ -22,7 +24,6 @@
                <children>
                   <VBox fx:id="FlowExecutionFreeInputsVbox" alignment="CENTER">
                      <children>
-                        <Button fx:id="FlowExecutionFreeInputsAddButton" mnemonicParsing="false" onAction="#addNewInput" text="ADD" />
                         <TableView id="freeInputsTableView" fx:id="FlowExecutionFreeInputsTable" editable="true" prefHeight="200.0" prefWidth="624.0">
                           <columns>
                             <TableColumn id="freeInputNameColumn" fx:id="freeInputsNameCol" prefWidth="75.0" text="Name" />
@@ -35,7 +36,7 @@
                   </VBox>
                   <VBox fx:id="FlowExecuteExecutionVbox" alignment="CENTER" prefHeight="200.0" prefWidth="321.0" HBox.hgrow="SOMETIMES">
                      <children>
-                        <Button id="executionButton" fx:id="FlowExecutionButton" disable="true" mnemonicParsing="false" onAction="#executeFlow" text="EXECUTE" VBox.vgrow="SOMETIMES" />
+                        <Button id="dark" fx:id="FlowExecutionButton" mnemonicParsing="false" onAction="#executeFlow" text="EXECUTE" VBox.vgrow="SOMETIMES" />
                         <HBox fx:id="FlowExecutionExecuteHbox" alignment="BOTTOM_CENTER">
                            <children>
                               <Label fx:id="FlowExecutionProgressLabel" prefHeight="21.0" prefWidth="67.0" text="Progress" />
@@ -51,16 +52,16 @@
             </HBox>
          </top>
          <left>
-            <BorderPane id="flowToExecuteDetailsBorderPane" fx:id="FlowExectuionflowDetailsBorderPane" maxHeight="416.0" maxWidth="416.0" minHeight="202.0" minWidth="300.0" prefHeight="202.0" prefWidth="416.0">
+            <BorderPane id="flowToExecuteDetailsBorderPane" fx:id="FlowExectuionflowDetailsBorderPane" maxHeight="600.0" maxWidth="408.0" minHeight="202.0" minWidth="300.0" prefHeight="229.0" prefWidth="408.0">
                <center>
-                  <GridPane id="flowToExecuteGridPane" fx:id="FlowExecutionFlowDetailsGridPane" gridLinesVisible="true" prefHeight="202.0" prefWidth="316.0">
+                  <GridPane id="flowToExecuteGridPane" fx:id="FlowExecutionFlowDetailsGridPane" prefHeight="260.0" prefWidth="316.0" vgap="10.0">
                     <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="201.0" minWidth="10.0" prefWidth="95.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="321.0" minWidth="10.0" prefWidth="321.0" />
                     </columnConstraints>
                     <rowConstraints>
                       <RowConstraints maxHeight="56.0" minHeight="20.0" prefHeight="21.0" vgrow="SOMETIMES" />
-                      <RowConstraints maxHeight="111.0" minHeight="40.0" prefHeight="47.0" vgrow="NEVER" />
+                      <RowConstraints maxHeight="111.0" minHeight="40.0" vgrow="SOMETIMES" />
                       <RowConstraints maxHeight="139.0" minHeight="80.0" prefHeight="112.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
@@ -83,10 +84,15 @@
                            <padding>
                               <Insets left="10.0" />
                            </padding></Label>
-                        <Label fx:id="flowDetailsActualDescription" GridPane.columnIndex="1" GridPane.rowIndex="1">
-                           <padding>
-                              <Insets left="10.0" />
-                           </padding></Label>
+                        <ScrollPane hbarPolicy="ALWAYS" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                           <content>
+                              <Label fx:id="flowDetailsActualDescription">
+                                 <padding>
+                                    <Insets left="10.0" />
+                                 </padding>
+                              </Label>
+                           </content>
+                        </ScrollPane>
                         <ScrollPane vbarPolicy="ALWAYS" GridPane.columnIndex="1" GridPane.rowIndex="2">
                            <content>
                               <Label fx:id="flowDetailsActualSteps">
@@ -100,6 +106,9 @@
                      <padding>
                         <Insets bottom="40.0" />
                      </padding>
+                     <BorderPane.margin>
+                        <Insets top="30.0" />
+                     </BorderPane.margin>
                   </GridPane>
                </center>
                <top>
@@ -111,7 +120,7 @@
             </BorderPane>
          </left>
          <bottom>
-            <BorderPane id="contionuationBorderPane" fx:id="ContinuationBorderPane" minHeight="100.0" prefHeight="100.0" prefWidth="841.0">
+            <BorderPane id="contionuationBorderPane" fx:id="ContinuationBorderPane" minHeight="100.0" prefHeight="110.0" prefWidth="841.0" style="-fx-border-color: black;">
                <center>
                   <HBox id="continuationHbox" fx:id="continuationHbox" BorderPane.alignment="CENTER">
                      <children>
@@ -144,20 +153,23 @@
                </BorderPane.margin>
             </BorderPane>
          </bottom>
+         <padding>
+            <Insets top="10.0" />
+         </padding>
          <center>
-            <BorderPane id="executionDetailsBorderPane" fx:id="ExecutionDetailsBorderPane" maxHeight="400.0" maxWidth="1000.0" minHeight="202.0" minWidth="300.0" prefHeight="202.0" prefWidth="506.0">
+            <BorderPane id="executionDetailsBorderPane" fx:id="ExecutionDetailsBorderPane" maxHeight="600.0" maxWidth="1000.0" minHeight="202.0" minWidth="300.0" prefHeight="202.0" prefWidth="600.0" BorderPane.alignment="TOP_LEFT">
                <center>
-                  <GridPane id="executionDetailsGridPane" fx:id="ExecutionDetailsGridPane" gridLinesVisible="true" prefHeight="222.0" prefWidth="425.0">
+                  <GridPane id="executionDetailsGridPane" fx:id="ExecutionDetailsGridPane" prefHeight="260.0" prefWidth="560.0" vgap="10.0" BorderPane.alignment="CENTER">
                     <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints hgrow="ALWAYS" maxWidth="187.0" minWidth="10.0" prefWidth="110.0" />
+                        <ColumnConstraints hgrow="ALWAYS" maxWidth="400.0" minWidth="10.0" prefWidth="275.0" />
                     </columnConstraints>
                     <rowConstraints>
-                        <RowConstraints maxHeight="56.0" minHeight="20.0" prefHeight="20.0" vgrow="SOMETIMES" />
-                        <RowConstraints maxHeight="56.0" minHeight="20.0" prefHeight="20.0" vgrow="SOMETIMES" />
-                        <RowConstraints maxHeight="40.0" minHeight="20.0" prefHeight="20.0" vgrow="SOMETIMES" />
-                      <RowConstraints maxHeight="111.0" minHeight="40.0" prefHeight="37.0" vgrow="SOMETIMES" />
-                      <RowConstraints maxHeight="250.0" minHeight="80.0" prefHeight="74.0" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="56.0" minHeight="20.0" prefHeight="20.0" vgrow="NEVER" />
+                        <RowConstraints maxHeight="56.0" minHeight="20.0" prefHeight="20.0" vgrow="NEVER" />
+                        <RowConstraints maxHeight="40.0" minHeight="20.0" prefHeight="20.0" vgrow="NEVER" />
+                      <RowConstraints minHeight="40.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="80.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
                         <Label id="executionFormalOutputsLabel" fx:id="ExecutionUuidLabel" text="formal outputs" GridPane.rowIndex="3">
@@ -200,33 +212,36 @@
                               <Insets left="10.0" />
                            </padding>
                         </Label>
-                        <Label fx:id="executionActualFormalOutputs" GridPane.columnIndex="1" GridPane.rowIndex="3">
-                           <padding>
-                              <Insets left="10.0" />
-                           </padding>
-                        </Label>
-                        <Label fx:id="executionActualSteps" GridPane.columnIndex="1" GridPane.rowIndex="4">
-                           <padding>
-                              <Insets left="10.0" />
-                           </padding>
-                        </Label>
+                        <ListView fx:id="executionFormalOutputsListView" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                        <ListView prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
                      </children>
                      <padding>
                         <Insets bottom="40.0" left="40.0" />
                      </padding>
+                     <BorderPane.margin>
+                        <Insets top="30.0" />
+                     </BorderPane.margin>
                   </GridPane>
                </center>
                <top>
                   <Label id="executionDetailsLabel" fx:id="ExecutionDetailsLabel" text="Execution details" BorderPane.alignment="TOP_CENTER" />
                </top>
                <BorderPane.margin>
-                  <Insets top="30.0" />
+                  <Insets left="30.0" top="30.0" />
                </BorderPane.margin>
             </BorderPane>
          </center>
-         <padding>
-            <Insets top="10.0" />
-         </padding>
+         <right>
+            <VBox prefWidth="100.0" BorderPane.alignment="CENTER">
+               <children>
+                  <Label text="Label" />
+                  <Pane prefHeight="200.0" prefWidth="200.0" />
+               </children>
+               <BorderPane.margin>
+                  <Insets top="30.0" />
+               </BorderPane.margin>
+            </VBox>
+         </right>
       </BorderPane>
    </content>
 </ScrollPane>
