--- a/GUI/src/JavaFx/Body/body.fxml
+++ b/GUI/src/JavaFx/Body/body.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<TabPane fx:id="bodyComponent" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="JavaFx.Body.BodyController" stylesheets="@body.css">
+<TabPane fx:id="bodyComponent" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="JavaFx.Body.BodyController">
 
   <tabs>
       <Tab fx:id="flowDefinitionTab" text="Flows Definition">
