--- a/GUI/src/JavaFx/Header/Header.fxml
+++ b/GUI/src/JavaFx/Header/Header.fxml
@@ -10,15 +10,15 @@
 
 <VBox fx:id="headerComponent" alignment="TOP_CENTER" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="JavaFx.Header.HeaderController">
    <children>
-      <Label alignment="CENTER" contentDisplay="TOP" stylesheets="@Header.css" text="Stepper" textAlignment="CENTER" VBox.vgrow="ALWAYS">
+      <Label alignment="CENTER" contentDisplay="TOP"  text="Stepper" textAlignment="CENTER" VBox.vgrow="ALWAYS">
          <font>
             <Font size="19.0" />
          </font>
       </Label>
       <HBox alignment="CENTER_LEFT" prefWidth="600.0" spacing="10.0">
          <children>
-            <Button id="rnd" fx:id="loadButton" minWidth="-Infinity" mnemonicParsing="false" onAction="#handleLoadButtonClick" prefHeight="25.0" prefWidth="90.0" stylesheets="@Header.css" text="Load File" />
-            <Label fx:id="filePathLabel" alignment="CENTER" contentDisplay="CENTER" prefHeight="30.0" styleClass="label1" stylesheets="@Header.css" text="file path" />
+            <Button id="rnd" fx:id="loadButton" minWidth="-Infinity" mnemonicParsing="false" onAction="#handleLoadButtonClick" prefHeight="25.0" prefWidth="90.0" text="Load File" />
+            <Label fx:id="filePathLabel" alignment="CENTER" contentDisplay="CENTER" prefHeight="30.0" styleClass="label1" text="file path" />
          </children>
          <VBox.margin>
             <Insets left="10.0" />
