--- a/GUI/src/JavaFx/Body/FlowExecution/FlowExecution.fxml
+++ b/GUI/src/JavaFx/Body/FlowExecution/FlowExecution.fxml
@@ -19,7 +19,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="839.0" prefWidth="1209.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="JavaFx.Body.FlowExecution.FlowExecution">
+<ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="839.0" prefViewportHeight="839.0" prefViewportWidth="1209.0" prefWidth="1209.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="JavaFx.Body.FlowExecution.FlowExecution">
     <content>
         <BorderPane prefHeight="500.0" prefWidth="1000.0">
             <center>
@@ -66,7 +66,7 @@
             <top>
                 <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                     <children>
-                        <ImageView fx:id="flowExecutionButtonImage" fitHeight="50.0" fitWidth="50.0" layoutX="901.0" layoutY="50.0" onMouseClicked="#executeFlow" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="93.0" AnchorPane.topAnchor="50.0">
+                        <ImageView fx:id="flowExecutionButtonImage" fitHeight="50.0" fitWidth="50.0" layoutX="1064.0" layoutY="50.0" onMouseClicked="#executeFlow" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="93.0" AnchorPane.topAnchor="50.0">
                             <image>
                                 <Image url="@executionIcon.png" />
                             </image>
@@ -75,9 +75,9 @@
                             </cursor>
                         </ImageView>
                         <ProgressBar fx:id="executionProgressBar" layoutX="983.0" layoutY="128.0" prefHeight="23.0" prefWidth="212.0" progress="0.0" AnchorPane.rightAnchor="12.0" AnchorPane.topAnchor="128.0" />
-                <AnchorPane layoutX="2.0" minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="803.0">
+                <AnchorPane layoutX="2.0" minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="846.0">
                      <children>
-                        <ScrollPane fx:id="freeInputsScrollPane" layoutX="367.0" layoutY="16.0" prefHeight="182.0" prefWidth="422.0">
+                        <ScrollPane fx:id="freeInputsScrollPane" layoutX="367.0" layoutY="16.0" prefHeight="182.0">
                            <content>
                               <GridPane fx:id="freeInputsGridPane" hgap="20.0" vgap="10.0">
                                 <columnConstraints>
