--- a/GUI/src/JavaFx/Body/FlowExecution/FlowExecution.fxml
+++ b/GUI/src/JavaFx/Body/FlowExecution/FlowExecution.fxml
@@ -28,38 +28,35 @@
                         <Label fx:id="stepNameTitleLabel" layoutX="14.0" layoutY="28.0" text="No step to display" />
                         <Separator fx:id="StepOutputSeperator" layoutX="14.0" layoutY="358.0" maxHeight="-Infinity" prefHeight="22.0" prefWidth="807.0" AnchorPane.bottomAnchor="247.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="15.0" />
                         <Label fx:id="outputNameDisplayNameLabel" layoutX="14.0" layoutY="380.0" text="No output to display" />
-                  <GridPane fx:id="stepDetailsGridPane" layoutX="14.0" layoutY="74.0" prefHeight="267.0" prefWidth="388.0">
+                  <GridPane fx:id="stepDetailsGridPane" layoutX="14.0" layoutY="74.0" prefHeight="267.0" prefWidth="368.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" maxWidth="161.0" minWidth="10.0" prefWidth="70.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="458.0" minWidth="10.0" prefWidth="318.0" />
+                        <ColumnConstraints hgrow="ALWAYS" maxWidth="458.0" minWidth="10.0" prefWidth="318.0" />
                     </columnConstraints>
                     <rowConstraints>
-                      <RowConstraints maxHeight="84.0" minHeight="0.0" prefHeight="28.0" vgrow="SOMETIMES" />
-                      <RowConstraints maxHeight="178.0" minHeight="10.0" prefHeight="35.0" vgrow="ALWAYS" />
-                      <RowConstraints maxHeight="223.0" minHeight="10.0" prefHeight="52.0" vgrow="SOMETIMES" />
-                        <RowConstraints maxHeight="223.0" minHeight="10.0" prefHeight="77.0" vgrow="SOMETIMES" />
-                        <RowConstraints maxHeight="223.0" minHeight="10.0" prefHeight="94.0" vgrow="SOMETIMES" />
+                      <RowConstraints maxHeight="84.0" minHeight="0.0" prefHeight="34.0" vgrow="ALWAYS" />
+                      <RowConstraints maxHeight="178.0" minHeight="10.0" prefHeight="79.0" vgrow="ALWAYS" />
+                        <RowConstraints maxHeight="223.0" minHeight="10.0" prefHeight="150.0" vgrow="ALWAYS" />
                     </rowConstraints>
                      <children>
                         <Label text="result" />
                         <Label text="time" GridPane.rowIndex="1" />
-                        <Label text="inputs" GridPane.rowIndex="2" />
-                        <Label text="outputs" GridPane.rowIndex="3" />
-                        <Label text="logs" GridPane.rowIndex="4" />
+                        <Label text="logs" GridPane.rowIndex="2" />
                         <Label fx:id="stepResutLabel" GridPane.columnIndex="1" />
-                        <ScrollPane GridPane.columnIndex="1" GridPane.rowIndex="1">
+                        <ScrollPane prefHeight="79.0" prefWidth="331.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                            <content>
                               <Label fx:id="stepTimeLabel" />
                            </content>
                         </ScrollPane>
-                        <ScrollPane GridPane.columnIndex="1" GridPane.rowIndex="4">
+                        <ScrollPane GridPane.columnIndex="1" GridPane.rowIndex="2">
                            <content>
                               <Label fx:id="stepLogsLabel" />
                            </content>
                         </ScrollPane>
                      </children>
                   </GridPane>
-                  <AnchorPane fx:id="outputPresentationAnchorPane" layoutX="27.0" layoutY="411.0" prefHeight="200.0" prefWidth="778.0" />
+                  <AnchorPane fx:id="outputPresentationAnchorPane" layoutX="27.0" layoutY="411.0" prefHeight="200.0" prefWidth="770.0" />
+                  <AnchorPane fx:id="stepIODataDisplayAnchorPain" layoutX="495.0" layoutY="75.0" prefHeight="289.0" prefWidth="336.0" />
                     </children>
                 </AnchorPane>
             </center>
