--- a/GUI/src/JavaFx/Body/Body.fxml
+++ b/GUI/src/JavaFx/Body/Body.fxml
@@ -13,13 +13,12 @@
          </content></Tab>
      <Tab fx:id="flowExecutionTab" text="Flows Executions">
         <content>
-           <fx:include fx:id="flowExecution"  source="FlowExecution/FlowExecution.fxml" />
+           <fx:include fx:id="flowExecution" source="FlowExecution/FlowExecution.fxml" />
         </content></Tab>
-    <Tab fx:id="UntitledTab" text="Untitled Tab 1">
+    <Tab fx:id="flowHistoryTab" text="Flow History">
       <content>
-        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-      </content>
-    </Tab>
+          <fx:include fx:id="flowHistory" source="FlowHistory/FlowHistory.fxml" />
+      </content></Tab>
     <Tab text="Untitled Tab 2">
       <content>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
