--- a/GUI/src/JavaFx/Body/FlowDefinition/FlowDefinition.fxml
+++ b/GUI/src/JavaFx/Body/FlowDefinition/FlowDefinition.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<ScrollPane fitToHeight="true" fitToWidth="true" minHeight="569.0" minWidth="1113.0" prefHeight="597.0" prefWidth="1150.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="JavaFx.Body.FlowDefinition.FlowDefinition">
+<ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="597.0" prefWidth="1150.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="JavaFx.Body.FlowDefinition.FlowDefinition">
    <content>
       <BorderPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="567.0" prefWidth="1131.0">
          <center>
