--- a/GUI/src/JavaFx/Body/FlowStats/FlowStats.fxml
+++ b/GUI/src/JavaFx/Body/FlowStats/FlowStats.fxml
@@ -3,50 +3,72 @@
 <?import javafx.scene.chart.BarChart?>
 <?import javafx.scene.chart.CategoryAxis?>
 <?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<ScrollPane fitToHeight="true" fitToWidth="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minViewportHeight="600.0" minViewportWidth="800.0" minWidth="-Infinity" prefHeight="700.0" prefViewportHeight="600.0" prefViewportWidth="800.0" prefWidth="1000.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="FlowStats">
+<ScrollPane fitToHeight="true" fitToWidth="true" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="JavaFx.Body.FlowStats.FlowStats">
    <content>
-      <BorderPane prefHeight="200.0" prefWidth="200.0">
+      <BorderPane fx:id="flowStatsBorderPane" prefHeight="700.0" prefWidth="1000.0">
          <bottom>
-            <HBox prefHeight="303.0" prefWidth="1000.0">
+            <AnchorPane>
                <children>
-                  <HBox HBox.hgrow="ALWAYS">
-                     <children>
-                        <TableView fx:id="flowStatsTableView" prefHeight="303.0" prefWidth="500.0" HBox.hgrow="ALWAYS">
-                          <columns>
-                            <TableColumn fx:id="flowCol" prefWidth="165.5" text="Flow" />
-                            <TableColumn fx:id="flowExecutionCountCol" prefWidth="165.5" text="Execution count" />
-                              <TableColumn fx:id="flowAvgTimeCol" prefWidth="165.5" text="Avg time" />
-                          </columns>
-                        </TableView>
-                     </children>
-                  </HBox>
-                  <HBox alignment="TOP_RIGHT" HBox.hgrow="ALWAYS">
-                     <children>
-                        <TableView fx:id="stepStatsTableView" prefHeight="303.0" prefWidth="500.0" HBox.hgrow="ALWAYS">
-                           <columns>
-                              <TableColumn fx:id="stepCol" prefWidth="165.5" text="Step" />
-                              <TableColumn fx:id="stepExecutionCountCol" prefWidth="165.5" text="Execution count" />
-                              <TableColumn fx:id="stepAvgTimeCol" prefWidth="165.5" text="Avg time" />
-                           </columns>
-                        </TableView>
-                     </children>
-                  </HBox>
+                  <ScrollPane fitToHeight="true" fitToWidth="true" minWidth="-Infinity" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                     <content>
+                        <HBox alignment="CENTER" prefHeight="303.0" prefWidth="1000.0">
+                           <children>
+                              <VBox>
+                                 <children>
+                                    <CheckBox fx:id="showStepsChart" mnemonicParsing="false" />
+                                 </children>
+                              </VBox>
+                              <HBox>
+                                 <children>
+                                    <TableView fx:id="flowStatsTableView" prefHeight="303.0" prefWidth="500.0" HBox.hgrow="ALWAYS">
+                                      <columns>
+                                        <TableColumn fx:id="flowCol" prefWidth="165.5" text="Flow" />
+                                        <TableColumn fx:id="flowExecutionCountCol" prefWidth="165.5" text="Execution count" />
+                                          <TableColumn fx:id="flowAvgTimeCol" prefWidth="165.5" text="Avg time (mil)" />
+                                      </columns>
+                                       <columnResizePolicy>
+                                          <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                       </columnResizePolicy>
+                                    </TableView>
+                                 </children>
+                              </HBox>
+                              <HBox alignment="TOP_RIGHT">
+                                 <children>
+                                    <TableView fx:id="stepStatsTableView" prefHeight="303.0" prefWidth="500.0" HBox.hgrow="ALWAYS">
+                                       <columns>
+                                          <TableColumn fx:id="stepCol" prefWidth="165.5" text="Step" />
+                                          <TableColumn fx:id="stepExecutionCountCol" prefWidth="165.5" text="Execution count" />
+                                          <TableColumn fx:id="stepAvgTimeCol" prefWidth="165.5" text="Avg time (mil)" />
+                                       </columns>
+                                       <columnResizePolicy>
+                                          <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                       </columnResizePolicy>
+                                    </TableView>
+                                 </children>
+                              </HBox>
+                           </children>
+                        </HBox>
+                     </content>
+                  </ScrollPane>
                </children>
-            </HBox>
+            </AnchorPane>
          </bottom>
          <center>
-            <BarChart fx:id="chartBar" BorderPane.alignment="CENTER">
+            <BarChart fx:id="barChart" BorderPane.alignment="CENTER">
               <xAxis>
-                <CategoryAxis side="BOTTOM" />
+                <CategoryAxis label="Label" side="BOTTOM" />
               </xAxis>
               <yAxis>
-                <NumberAxis side="LEFT" />
+                <NumberAxis label="Label" side="LEFT" />
               </yAxis>
             </BarChart>
          </center>
