--- a/GUI/src/JavaFx/Body/FlowExecution/FlowExecution.fxml
+++ b/GUI/src/JavaFx/Body/FlowExecution/FlowExecution.fxml
@@ -4,12 +4,12 @@
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TreeView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -17,53 +17,14 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="839.0" prefViewportHeight="839.0" prefViewportWidth="1209.0" prefWidth="1209.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="JavaFx.Body.FlowExecution.FlowExecution">
     <content>
         <BorderPane prefHeight="500.0" prefWidth="1000.0">
-            <center>
-                <AnchorPane fx:id="flowExecutionAnchorPane" minWidth="180.0" prefHeight="474.0" prefWidth="731.0" BorderPane.alignment="TOP_LEFT">
-                    <children>
-                        <Label fx:id="stepNameTitleLabel" layoutX="14.0" layoutY="28.0" text="No step to display" />
-                        <Separator fx:id="StepOutputSeperator" layoutX="14.0" layoutY="358.0" maxHeight="-Infinity" prefHeight="22.0" prefWidth="807.0" AnchorPane.bottomAnchor="247.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="15.0" />
-                        <Label fx:id="outputNameDisplayNameLabel" layoutX="14.0" layoutY="380.0" text="No output to display" />
-                  <GridPane fx:id="stepDetailsGridPane" layoutX="14.0" layoutY="74.0" prefHeight="267.0" prefWidth="368.0">
-                    <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="161.0" minWidth="10.0" prefWidth="70.0" />
-                        <ColumnConstraints hgrow="ALWAYS" maxWidth="458.0" minWidth="10.0" prefWidth="318.0" />
-                    </columnConstraints>
-                    <rowConstraints>
-                      <RowConstraints maxHeight="84.0" minHeight="0.0" prefHeight="34.0" vgrow="ALWAYS" />
-                      <RowConstraints maxHeight="178.0" minHeight="10.0" prefHeight="79.0" vgrow="ALWAYS" />
-                        <RowConstraints maxHeight="223.0" minHeight="10.0" prefHeight="150.0" vgrow="ALWAYS" />
-                    </rowConstraints>
-                     <children>
-                        <Label text="result" />
-                        <Label text="time" GridPane.rowIndex="1" />
-                        <Label text="logs" GridPane.rowIndex="2" />
-                        <Label fx:id="stepResutLabel" GridPane.columnIndex="1" />
-                        <ScrollPane prefHeight="79.0" prefWidth="331.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
-                           <content>
-                              <Label fx:id="stepTimeLabel" />
-                           </content>
-                        </ScrollPane>
-                        <ScrollPane GridPane.columnIndex="1" GridPane.rowIndex="2">
-                           <content>
-                              <Label fx:id="stepLogsLabel" />
-                           </content>
-                        </ScrollPane>
-                     </children>
-                  </GridPane>
-                  <AnchorPane fx:id="outputPresentationAnchorPane" layoutX="27.0" layoutY="411.0" prefHeight="200.0" prefWidth="770.0" />
-                  <AnchorPane fx:id="stepIODataDisplayAnchorPane" layoutX="411.0" layoutY="149.0" prefHeight="209.0" prefWidth="374.0" />
-                  <ListView fx:id="stepInputListView" layoutX="436.0" layoutY="10.0" prefHeight="124.0" prefWidth="129.0" />
-                  <ListView fx:id="stepOutputListView" layoutX="617.0" layoutY="10.0" prefHeight="124.0" prefWidth="129.0" />
-                    </children>
-                </AnchorPane>
-            </center>
             <top>
-                <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+                <AnchorPane prefHeight="244.0" prefWidth="1207.0" BorderPane.alignment="CENTER">
                     <children>
                         <ImageView fx:id="flowExecutionButtonImage" fitHeight="50.0" fitWidth="50.0" layoutX="1064.0" layoutY="50.0" onMouseClicked="#executeFlow" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="93.0" AnchorPane.topAnchor="50.0">
                             <image>
@@ -118,82 +79,33 @@
                     </children>
                 </AnchorPane>
             </top>
-            <left>
-                <AnchorPane prefHeight="627.0" prefWidth="371.0" BorderPane.alignment="CENTER">
-                    <children>
-                        <Label fx:id="floeDetailsLabel" layoutX="14.0" layoutY="31.0" text="Flow Details">
-                            <font>
-                                <Font size="22.0" />
-                            </font>
-                        </Label>
-                        <GridPane fx:id="flowDetailGridPane" layoutX="2.0" layoutY="78.0" prefHeight="226.0" prefWidth="280.0">
-                            <columnConstraints>
-                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="249.0" minWidth="10.0" prefWidth="79.0" />
-                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="249.0" minWidth="10.0" prefWidth="201.0" />
-                            </columnConstraints>
-                            <rowConstraints>
-                                <RowConstraints maxHeight="77.0" minHeight="0.0" prefHeight="29.0" vgrow="SOMETIMES" />
-                                <RowConstraints maxHeight="200.0" minHeight="10.0" prefHeight="97.0" vgrow="SOMETIMES" />
-                                <RowConstraints maxHeight="186.0" minHeight="10.0" prefHeight="112.0" vgrow="SOMETIMES" />
-                            </rowConstraints>
-                            <children>
-                                <Label prefHeight="21.0" prefWidth="87.0" text="Flow Name" />
-                                <Label text="Description" GridPane.rowIndex="1" />
-                                <Label text="Steps" GridPane.rowIndex="2" />
-                                <Label fx:id="flowNameLabel" GridPane.columnIndex="1" />
-                                <ScrollPane vbarPolicy="NEVER" GridPane.columnIndex="1" GridPane.rowIndex="1">
-                                    <content>
-                                        <Label fx:id="floeDescriptionLabel" />
-                                    </content>
-                                </ScrollPane>
-                                <ScrollPane prefHeight="152.0" prefWidth="202.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
-                                    <content>
-                                        <Label fx:id="floeStepsLabel" />
-                                    </content>
-                                </ScrollPane>
-                            </children>
-                            <padding>
-                                <Insets bottom="10.0" />
-                            </padding>
-                        </GridPane>
-                        <Separator layoutX="340.0" layoutY="6.0" orientation="VERTICAL" prefHeight="319.0" prefWidth="17.0" AnchorPane.bottomAnchor="6.0" AnchorPane.leftAnchor="340.0" AnchorPane.topAnchor="6.0" />
-                  <AnchorPane layoutX="2.0" layoutY="290.0" prefHeight="337.0" prefWidth="290.0">
+         <center>
+            <BorderPane prefHeight="429.0" prefWidth="1207.0" BorderPane.alignment="CENTER">
+               <top>
+                  <VBox alignment="TOP_CENTER" BorderPane.alignment="CENTER">
                      <children>
-                              <Label layoutX="14.0" layoutY="14.0" text="Execution Details">
-                                  <font>
-                                      <Font size="22.0" />
-                                  </font>
-                              </Label>
-                              <GridPane fx:id="executionDetailsGridPane" focusTraversable="true" layoutY="68.0" maxHeight="1.7976931348623157E308" prefHeight="260.0" prefWidth="283.0">
-                                  <columnConstraints>
-                                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="192.0" minWidth="10.0" prefWidth="100.0" />
-                                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="241.0" minWidth="10.0" prefWidth="183.0" />
-                                  </columnConstraints>
-                                  <rowConstraints>
-                                      <RowConstraints maxHeight="47.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                      <RowConstraints maxHeight="107.0" minHeight="6.0" prefHeight="44.0" vgrow="SOMETIMES" />
-                                      <RowConstraints maxHeight="127.0" minHeight="8.0" prefHeight="35.0" vgrow="SOMETIMES" />
-                                      <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="100.0" vgrow="ALWAYS" />
-                                      <RowConstraints maxHeight="1.7976931348623157E308" minHeight="7.0" prefHeight="95.0" vgrow="ALWAYS" />
-                                  </rowConstraints>
-                                  <children>
-                                      <Label text="uuid" textAlignment="CENTER" />
-                                      <Label prefWidth="74.0" text="timestamp" GridPane.rowIndex="1" />
-                                      <Label text="result" GridPane.rowIndex="2" />
-                                      <Label text="formal outputs" textAlignment="CENTER" wrapText="true" GridPane.rowIndex="3" />
-                                      <Label text="steps info" textAlignment="CENTER" wrapText="true" GridPane.rowIndex="4" />
-                                      <ListView fx:id="formalOutputsListView" maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3" GridPane.vgrow="ALWAYS" />
-                                      <ListView fx:id="stepsInfoListView" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="4" GridPane.vgrow="ALWAYS" />
-                                      <Label fx:id="executionUuidLabel" GridPane.columnIndex="1" />
-                                      <Label fx:id="executionTimestampLabel" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                                      <Label fx:id="executionResultLabel" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                                  </children>
-                              </GridPane>
+                        <Separator prefWidth="200.0" />
+                        <Label fx:id="CentralFlowName" text="Flow Name">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Label>
+                        <Separator prefWidth="200.0" />
                      </children>
-                  </AnchorPane>
-                    </children>
-                </AnchorPane>
-            </left>
+                  </VBox>
+               </top>
+               <left>
+                  <TreeView fx:id="StepsTreeVIew" onMouseClicked="#setStepData" prefHeight="429.0" prefWidth="376.0" BorderPane.alignment="CENTER" />
+               </left>
+               <center>
+                  <ScrollPane fitToHeight="true" fitToWidth="true" BorderPane.alignment="CENTER">
+                     <content>
+                        <VBox fx:id="MainExecutionDataVbox" prefHeight="200.0" prefWidth="100.0" />
+                     </content>
+                  </ScrollPane>
+               </center>
+            </BorderPane>
+         </center>
         </BorderPane>
     </content>
 </ScrollPane>
