--- a/GUI/src/JavaFx/Body/FlowExecution/FlowExecution.fxml
+++ b/GUI/src/JavaFx/Body/FlowExecution/FlowExecution.fxml
@@ -35,7 +35,7 @@
                             </cursor>
                         </ImageView>
                         <ProgressBar fx:id="executionProgressBar" layoutX="983.0" layoutY="128.0" prefHeight="23.0" prefWidth="212.0" progress="0.0" AnchorPane.rightAnchor="12.0" AnchorPane.topAnchor="128.0" />
-                <AnchorPane layoutX="2.0" minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="846.0">
+                <AnchorPane layoutX="2.0" minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="975.0">
                      <children>
                         <ScrollPane fx:id="freeInputsScrollPane" layoutX="367.0" layoutY="16.0" prefHeight="182.0">
                            <content>
@@ -62,7 +62,8 @@
                         <TableView fx:id="freeInputsTableView" layoutX="8.0" layoutY="50.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="145.0" prefWidth="351.0" AnchorPane.leftAnchor="8.0">
                           <columns>
                             <TableColumn fx:id="freeInputNameCol" prefWidth="121.00003051757812" text="Name" />
-                              <TableColumn fx:id="freeInputValueCol" prefWidth="117.0" text="Value" />
+                              <TableColumn fx:id="freeInputApiNameCol" prefWidth="117.0" text="Description" />
+                              <TableColumn fx:id="freeInputValueCol" prefWidth="121.00003051757812" text="Value" />
                           </columns>
                         </TableView>
                      </children>
