--- a/GUI/src/JavaFx/Body/FlowStats/FlowStats.fxml
+++ b/GUI/src/JavaFx/Body/FlowStats/FlowStats.fxml
@@ -12,6 +12,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
+<?import javafx.scene.control.Label?>
 <ScrollPane fitToHeight="true" fitToWidth="true" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="JavaFx.Body.FlowStats.FlowStats">
    <content>
       <BorderPane fx:id="flowStatsBorderPane" prefHeight="700.0" prefWidth="1000.0">
@@ -24,6 +25,7 @@
                            <children>
                               <VBox>
                                  <children>
+                                     <Label text="Show step chart"></Label>
                                     <CheckBox fx:id="showStepsChart" mnemonicParsing="false" />
                                  </children>
                               </VBox>
