--- a/GUI/src/JavaFx/Body/Body.fxml
+++ b/GUI/src/JavaFx/Body/Body.fxml
@@ -4,22 +4,22 @@
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<TabPane fx:id="bodyComponent" stylesheets="@resource/styles.css" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="JavaFx.Body.BodyController">
+<TabPane fx:id="bodyComponent"  tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="JavaFx.Body.BodyController">
 
   <tabs>
-      <Tab fx:id="flowDefinitionTab" text="Flows Definition">
+      <Tab id="tab" fx:id="flowDefinitionTab" text="Flows Definition">
          <content>
             <fx:include fx:id="flowDefinition" source="FlowDefinition/FlowDefinition.fxml" />
          </content></Tab>
-     <Tab fx:id="flowExecutionTab" text="Flows Executions">
+     <Tab id="tab" fx:id="flowExecutionTab" text="Flows Executions">
         <content>
            <fx:include fx:id="flowExecution" source="FlowExecution/FlowExecution.fxml" />
         </content></Tab>
-    <Tab fx:id="flowHistoryTab" text="Flow History">
+    <Tab id="tab" fx:id="flowHistoryTab" text="Flow History">
       <content>
           <fx:include fx:id="flowHistory" source="FlowHistory/FlowHistory.fxml" />
       </content></Tab>
-    <Tab fx:id="flowStatsTab" text="Flow Stats">
+    <Tab id="tab" fx:id="flowStatsTab" text="Flow Stats">
       <content>
           <fx:include fx:id="flowStats" source="FlowStats/FlowStats.fxml" />
       </content></Tab>
