--- a/GUI/src/JavaFx/Body/FlowHistory/FlowHistory.fxml
+++ b/GUI/src/JavaFx/Body/FlowHistory/FlowHistory.fxml
@@ -17,9 +17,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="724.0" prefWidth="1042.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="JavaFx.Body.FlowHistory.FlowHistory">
+<ScrollPane id="screen" fitToHeight="true" fitToWidth="true" prefHeight="724.0" prefWidth="1042.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="JavaFx.Body.FlowHistory.FlowHistory">
    <content>
-      <BorderPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="597.0">
+      <BorderPane styleClass="tab-content-background" minHeight="-Infinity" minWidth="-Infinity" prefHeight="597.0">
          <top>
             <HBox alignment="TOP_CENTER" spacing="5.0" BorderPane.alignment="CENTER">
                <BorderPane.margin>
@@ -60,7 +60,7 @@
                   <Separator prefWidth="200.0" />
                   <HBox alignment="TOP_RIGHT" spacing="5.0">
                      <children>
-                        <Button fx:id="rerunButton" mnemonicParsing="false" onAction="#rerunFlow" text="Rerun flow" />
+                        <Button fx:id="rerunButton" id="dark" mnemonicParsing="false" onAction="#rerunFlow" text="Rerun flow" />
                         <Separator orientation="VERTICAL" prefHeight="0.0" prefWidth="0.0" />
                         <ChoiceBox fx:id="continuationChoiceBox" onMouseEntered="#setContinuationText" prefHeight="31.0" prefWidth="143.0" />
                         <ImageView fx:id="continuationButtonImage" fitHeight="31.0" fitWidth="45.0" onMouseClicked="#continueToFlow" pickOnBounds="true" preserveRatio="true">
@@ -81,7 +81,7 @@
                <center>
                   <ScrollPane fitToHeight="true" fitToWidth="true">
                      <content>
-                        <VBox fx:id="MainExecutionDataVbox" alignment="TOP_CENTER" prefHeight="481.0" prefWidth="305.0" spacing="5.0">
+                        <VBox styleClass="tab-content-background" fx:id="MainExecutionDataVbox" alignment="TOP_CENTER" prefHeight="481.0" prefWidth="305.0" spacing="5.0">
                            <padding>
                               <Insets left="5.0" />
                            </padding>
@@ -106,7 +106,7 @@
                   </VBox>
                </top>
                <left>
-                  <TreeView fx:id="StepsTreeVIew" minWidth="328.0" onMouseClicked="#setStepData" prefHeight="429.0" prefWidth="376.0" BorderPane.alignment="CENTER">
+                  <TreeView styleClass="tab-content-background" fx:id="StepsTreeVIew" minWidth="328.0" onMouseClicked="#setStepData" prefHeight="429.0" prefWidth="376.0" BorderPane.alignment="CENTER">
                      <padding>
                         <Insets right="5.0" top="5.0" />
                      </padding>
